--- a/src/main/resources/com/mycompany/tictactoe/views/Login.fxml
+++ b/src/main/resources/com/mycompany/tictactoe/views/Login.fxml
@@ -12,137 +12,131 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<BorderPane fx:id="myBorder" prefHeight="600.0" prefWidth="900.0"
+            style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%,#E40078 0%,#C800B0 40%,#7A3DF0 65%,#205CFC 100% );"
+            xmlns="http://javafx.com/javafx/25"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.mycompany.tictactoe.controllers.LoginController">
 
-<BorderPane fx:id="myBorder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%,#E40078 0%,#C800B0 40%,#7A3DF0 65%,#205CFC 100% );" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.tictactoe.controllers.LoginController">
-   <padding>
-      <Insets top="20.0" />
-   </padding>
-   <center>
-      <StackPane prefHeight="345.0" prefWidth="900.0" BorderPane.alignment="CENTER">
-         <children>
-            <Pane maxHeight="354.0" maxWidth="538.0" prefHeight="354.0" prefWidth="538.0" style="-fx-border-color: white; -fx-background-radius: 50; -fx-border-radius: 50; -fx-background-color: transparent; -fx-background-color: #ffffff4e;" StackPane.alignment="CENTER">
-               <StackPane.margin>
-                  <Insets />
-               </StackPane.margin>
-               <children>
-                  <TextField fx:id="username" layoutX="87.0" layoutY="62.0" onAction="#usernameTextField" prefHeight="60.0" prefWidth="360.0" promptText="Enter your username" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: black;" />
-                  <Button fx:id="loginButton" layoutX="89.0" layoutY="227.0" mnemonicParsing="false" onAction="#loginButton" prefHeight="60.0" prefWidth="360.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #ec4899, #7c3aed); -fx-background-radius: 15;" text="Login" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                  </Button>
-                  <PasswordField fx:id="userPassword" layoutX="87.0" layoutY="154.0" onAction="#userPassword" prefHeight="60.0" prefWidth="360.0" promptText="Enter your password" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: black;" />
-                  <Text fill="WHITE" layoutX="140.0" layoutY="310.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Don`t have an account? " wrappingWidth="281.78204345703125">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Text>
-                  <Text fx:id="registerPage" layoutX="299.0" layoutY="309.0" onDragDetected="#toRegisterPage" strokeType="OUTSIDE" strokeWidth="0.0" text="Register here" underline="true">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Text>
-                  <Text fill="WHITE" layoutX="95.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Text>
-                  <Text fill="WHITE" layoutX="96.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Text>
-                  <ImageView fitHeight="27.0" fitWidth="17.0" layoutX="224.0" layoutY="249.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../assets/1-login.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </Pane>
-         </children>
-      </StackPane>
-   </center>
-   <top>
-      <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <Pane maxHeight="200.0" maxWidth="200.0">
-               <children>
-                  <Text fill="#f2f2f2" layoutX="-175.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tic Tac Toe" textAlignment="CENTER" wrappingWidth="549.2664184570312">
-                     <font>
-                        <Font size="45.0" />
-                     </font>
-                  </Text>
-                  <ImageView fitHeight="33.0" fitWidth="27.0" layoutX="-39.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../assets/flash2.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="14.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../assets/starts.png" />
-                     </image>
-                  </ImageView>
-                  <Text fill="#67cbdf" layoutX="53.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome Back">
-                     <font>
-                        <Font name="System Bold" size="16.0" />
-                     </font>
-                  </Text>
-                  <ImageView fitHeight="33.0" fitWidth="27.0" layoutX="212.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../assets/flash1.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="175.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../assets/starts.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </Pane>
-         </children>
-      </StackPane>
-   </top>
-   <center>
-      <Pane BorderPane.alignment="CENTER">
-         <children>
-            <Pane layoutX="210.0" prefHeight="355.0" prefWidth="503.0" style="-fx-border-radius: 50; -fx-background-radius: 50; -fx-background-color: transparent; -fx-border-color: white; -fx-background-color: #ffffff4e;" />
-            <AnchorPane layoutX="179.0" layoutY="24.0" prefHeight="0.0" prefWidth="127.0" />
-            <TextField fx:id="username" blendMode="SCREEN" cache="true" layoutX="281.0" layoutY="60.0" onAction="#usernameTextField" prefHeight="60.0" prefWidth="360.0" promptText="Enter your username" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: white; -fx-text-fill: white;">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></TextField>
-            <AnchorPane layoutX="179.0" layoutY="100.0" prefHeight="3.0" prefWidth="38.0" />
-            <TextField fx:id="userPassword" blendMode="SCREEN" layoutX="281.0" layoutY="155.0" onAction="#userPasswordTextField" prefHeight="60.0" prefWidth="360.0" promptText="Enter your password" style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: white; -fx-text-fill: white;">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></TextField>
-            <Button fx:id="loginButton" layoutX="281.0" layoutY="229.0" mnemonicParsing="false" onAction="#loginButton" prefHeight="60.0" prefWidth="360.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #ec4899, #7c3aed); -fx-background-radius: 15;" text="Login" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font></Button>
-            <Text fill="WHITE" layoutX="344.0" layoutY="310.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Don`t have an account? " wrappingWidth="281.78204345703125">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Text>
-            <Text fill="WHITE" layoutX="278.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Text>
-            <Text fill="WHITE" layoutX="279.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Text>
-            <Text fx:id="registerPage" fill="WHITE" layoutX="485.0" layoutY="310.0" onMouseClicked="#toRegisterPage" strokeType="OUTSIDE" strokeWidth="0.0" text="Register here" underline="true">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Text>
-         </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </Pane>
-   </center>
-   <padding>
-      <Insets top="20.0" />
-   </padding>
+    <padding>
+        <Insets top="20.0"/>
+    </padding>
+
+    <!-- Top Header -->
+    <top>
+        <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <children>
+                <Pane maxHeight="200.0" maxWidth="200.0">
+                    <children>
+                        <Text fill="#f2f2f2" layoutX="-175.0" layoutY="90.0"
+                              strokeType="OUTSIDE" strokeWidth="0.0"
+                              text="Tic Tac Toe" textAlignment="CENTER" wrappingWidth="549.266">
+                            <font>
+                                <Font size="45.0"/>
+                            </font>
+                        </Text>
+
+                        <ImageView fitHeight="33.0" fitWidth="27.0" layoutX="-39.0" layoutY="62.0"
+                                   pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../../../assets/flash2.png"/>
+                            </image>
+                        </ImageView>
+
+                        <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="14.0" layoutY="110.0"
+                                   pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../../../assets/starts.png"/>
+                            </image>
+                        </ImageView>
+
+                        <Text fill="#67cbdf" layoutX="53.0" layoutY="127.0" strokeType="OUTSIDE"
+                              strokeWidth="0.0" text="Welcome Back">
+                            <font>
+                                <Font name="System Bold" size="16.0"/>
+                            </font>
+                        </Text>
+
+                        <ImageView fitHeight="33.0" fitWidth="27.0" layoutX="212.0" layoutY="62.0"
+                                   pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../../../assets/flash1.png"/>
+                            </image>
+                        </ImageView>
+
+                        <ImageView fitHeight="23.0" fitWidth="27.0" layoutX="175.0" layoutY="110.0"
+                                   pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../../../assets/starts.png"/>
+                            </image>
+                        </ImageView>
+
+                    </children>
+                </Pane>
+            </children>
+        </StackPane>
+    </top>
+
+    <center>
+        <StackPane prefHeight="345.0" prefWidth="900.0" BorderPane.alignment="CENTER">
+            <children>
+                <Pane maxHeight="354.0" maxWidth="538.0" prefHeight="354.0" prefWidth="538.0"
+                      style="-fx-border-color: white; -fx-background-radius: 50; -fx-border-radius: 50; -fx-background-color: #ffffff4e;"
+                      StackPane.alignment="CENTER">
+
+                    <children>
+                        <Text fill="WHITE" layoutX="95.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0"
+                              text="Username">
+                            <font>
+                                <Font name="System Bold" size="12.0"/>
+                            </font>
+                        </Text>
+                        <TextField fx:id="username" layoutX="87.0" layoutY="62.0" onAction="#usernameTextField"
+                                   prefHeight="60.0" prefWidth="360.0" promptText="Enter your username"
+                                   style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: black;"/>
+
+                        <Text fill="WHITE" layoutX="96.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0"
+                              text="Password">
+                            <font>
+                                <Font name="System Bold" size="12.0"/>
+                            </font>
+                        </Text>
+                        <PasswordField fx:id="userPassword" layoutX="87.0" layoutY="154.0" onAction="#userPassword"
+                                       prefHeight="60.0" prefWidth="360.0" promptText="Enter your password"
+                                       style="-fx-background-color: #ffffffa0; -fx-background-radius: 15; -fx-border-color: white; -fx-border-radius: 15; -fx-prompt-text-fill: black;"/>
+                        <Button fx:id="loginButton" layoutX="89.0" layoutY="227.0" mnemonicParsing="false"
+                                onAction="#loginButton" prefHeight="60.0" prefWidth="360.0"
+                                style="-fx-background-color: linear-gradient(from 0% 0% to 100% 0%, #ec4899, #7c3aed); -fx-background-radius: 15;"
+                                text="Login" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="15.0"/>
+                            </font>
+                        </Button>
+                        <Text fill="WHITE" layoutX="140.0" layoutY="310.0" strokeType="OUTSIDE" strokeWidth="0.0"
+                              text="Don`t have an account? ">
+                            <font>
+                                <Font name="System Bold" size="14.0"/>
+                            </font>
+                        </Text>
+
+                        <Text fx:id="registerPage" fill="WHITE" layoutX="299.0" layoutY="309.0"
+                              onMouseClicked="#toRegisterPage" strokeType="OUTSIDE" strokeWidth="0.0"
+                              text="Register here" underline="true">
+                            <font>
+                                <Font name="System Bold" size="14.0"/>
+                            </font>
+                        </Text>
+                        <ImageView fitHeight="27.0" fitWidth="17.0" layoutX="224.0" layoutY="249.0"
+                                   pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../../../assets/1-login.png"/>
+                            </image>
+                        </ImageView>
+
+                    </children>
+                </Pane>
+            </children>
+        </StackPane>
+    </center>
+
 </BorderPane>
