--- a/src/main/resources/com/mycompany/tictactoe/views/users_list.fxml
+++ b/src/main/resources/com/mycompany/tictactoe/views/users_list.fxml
@@ -11,91 +11,86 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%,#E40078 0%,#C800B0 40%,#7A3DF0 65%,#205CFC 100%);" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.tictactoe.controllers.Users_listController">
 
    <center>
-      <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <StackPane prefHeight="600.0" prefWidth="900.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5">
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10">
                <children>
-                  <!-- HBox for title -->
-                  <HBox alignment="CENTER" prefHeight="79.0" prefWidth="900.0">
+                  <!-- Header Section -->
+                  <VBox alignment="CENTER" spacing="5">
+                      <children>
+                          <HBox alignment="CENTER" spacing="15.0">
+                             <children>
+                                <ImageView fitHeight="45.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                   <image>
+                                      <Image url="@../../../../images/people.png" />
+                                   </image>
+                                </ImageView>
+                                <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Online Players">
+                                   <font>
+                                      <Font size="30.0" />
+                                   </font>
+                                </Text>
+                             </children>
+                          </HBox>
+        
+                          <Text fx:id="welcomeText" fill="#ffffff" strokeType="OUTSIDE" strokeWidth="0.0" text="" textAlignment="CENTER">
+                             <font>
+                                <Font size="20.0"/>
+                             </font>
+                          </Text>
+        
+                          <Text fx:id="numberOfAvilablePlayers" fill="#fccee8" strokeType="OUTSIDE" strokeWidth="0.0" text="0 Players currently online" textAlignment="CENTER">
+                             <font>
+                                <Font size="14.0" />
+                             </font>
+                          </Text>
+                      </children>
+                      <VBox.margin>
+                          <Insets bottom="10.0" />
+                      </VBox.margin>
+                  </VBox>
+
+                  <!-- List Container -->
+                  <StackPane maxHeight="400.0" maxWidth="600.0" prefHeight="400.0" prefWidth="600.0">
                      <children>
-                        <ImageView fitHeight="45.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../../images/people.png" />
-                           </image>
-                           <HBox.margin>
-                              <Insets right="20.0" top="0.0" bottom="0.0" left="0.0"/>
-                           </HBox.margin>
-                        </ImageView>
-                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Online Players">
-                           <font>
-                              <Font size="30.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </HBox>
-
-                  <!-- Welcome Text -->
-                  <Text fx:id="welcomeText" fill="#ffffff" strokeType="OUTSIDE" strokeWidth="0.0" text="" textAlignment="CENTER">
-                     <font>
-                        <Font size="20.0"/>
-                     </font>
-                  </Text>
-
-                  <!-- Number of players online -->
-                  <Text fx:id="numberOfAvilablePlayers" fill="#fccee8" strokeType="OUTSIDE" strokeWidth="0.0" text="0 Players currently online" textAlignment="CENTER">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Text>
-               </children>
-               <padding>
-                  <Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/>
-               </padding>
-            </VBox>
-
-            <!-- ScrollPane for players list -->
-            <StackPane prefHeight="587.0" prefWidth="860.0">
-               <StackPane.margin>
-                  <Insets bottom="70.0" left="20.0" right="20.0" top="120.0"/>
-               </StackPane.margin>
-               <children>
-                  <ScrollPane fx:id="scrollPane" fitToWidth="true" pannable="true" prefHeight="390.0" prefWidth="860.0" style="-fx-background-color: transparent; -fx-border-color: rgba(255,255,255,0.7); -fx-border-radius: 15;">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="591.0" prefWidth="869.0" style="-fx-background-color: transparent;">
-                           <children>
-                              <!-- كل اللاعبين هيتضافوا هنا ديناميكي -->
-                              <VBox fx:id="playersContainer" prefWidth="855.0" spacing="10">
+                        <javafx.scene.shape.Rectangle arcHeight="40.0" arcWidth="40.0" fill="#ffffff32" height="400.0" stroke="#ffffff80" strokeType="INSIDE" width="600.0" />
+                        <ScrollPane fx:id="scrollPane" fitToWidth="true" pannable="true" hbarPolicy="NEVER" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: transparent; -fx-background: transparent; -fx-padding: 10;">
+                           <content>
+                              <VBox fx:id="playersContainer" spacing="10" style="-fx-background-color: transparent;">
                                  <padding>
-                                    <Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </VBox>
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </ScrollPane>
+                           </content>
+                           <StackPane.margin>
+                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </StackPane.margin>
+                        </ScrollPane>
+                     </children>
+                  </StackPane>
+
+                  <!-- Back button -->
+                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#BackToMenu" prefHeight="35.0" prefWidth="130.0" style="-fx-background-color: rgba(255,255,255,0.15); -fx-border-color: rgba(255,255,255,0.7); -fx-border-radius: 5;" text="Back To Menu">
+                     <graphic>
+                        <ImageView fitHeight="22.0" fitWidth="14.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../../images/back.png"/>
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
-            </StackPane>
-
-            <!-- Back button -->
-            <Button alignment="CENTER" mnemonicParsing="false" onAction="#BackToMenu" prefHeight="35.0" prefWidth="130.0" style="-fx-background-color: rgba(255,255,255,0.15); -fx-border-color: rgba(255,255,255,0.7); -fx-border-radius: 5;" text="Back To Menu" StackPane.alignment="BOTTOM_CENTER">
-               <StackPane.margin>
-                  <Insets bottom="20.0" top="0.0" left="0.0" right="0.0"/>
-               </StackPane.margin>
-               <graphic>
-                  <ImageView fitHeight="22.0" fitWidth="14.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../images/back.png"/>
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-
+            </VBox>
          </children>
       </StackPane>
    </center>
